[build-system]
requires = ["setuptools >=61", "wheel", "Cython >=3.0.5"]

[project]
name = "aiokafka"
description = "Kafka integration with asyncio"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Andrew Svetlov", email = "andrew.svetlov@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
    "Development Status :: 4 - Beta",
]

dynamic = ["version"]

dependencies = [
    "async-timeout",
    "packaging",
    "typing_extensions >=4.6.0",
]

[project.optional-dependencies]
snappy = ["cramjam"]
# v2.8.0 adds support for independent-block mode
lz4 = ["cramjam >=2.8.0"]
zstd = ["cramjam"]
gssapi = ["gssapi"]
all = ["cramjam >=2.8.0", "gssapi"]

[tool.setuptools.dynamic]
version = { attr = "aiokafka.__version__" }

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = [
    "aiokafka",
    "aiokafka.*",
]

[project.urls]
Documentation = "http://aiokafka.readthedocs.org"
Source = "https://github.com/aio-libs/aiokafka"
Changes = "https://github.com/aio-libs/aiokafka/blob/master/CHANGES.rst"


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-config", "--strict-markers"]
markers = [
    "ssl: Tests that require SSL certificates to run",
]
filterwarnings = [
    "error",
    # FIXME Until we fix socket leaks in tests
    "default:unclosed event loop:ResourceWarning",
]

[tool.coverage.run]
branch = true
source_pkgs = ["aiokafka", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true


[tool.ruff.lint]
# For the reference, check https://docs.astral.sh/ruff/rules/
select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "I",  # isort
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    "ASYNC",  # flake8-async
    # "S",  # flake8-bandit
    # "BLE",  # flake8-blind-except
    # "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EXE",  # flake8-executable
    "FA",  # flake8-future-annotations
]

[tool.ruff.format]
docstring-code-format = true


[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports = "silent"  # FIXME Remove after adding annotations
